crud-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-backend
  namespace: crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-backend
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: crud-backend
          image: crud/backend
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 1
            failureThreshold: 10
            successThreshold: 1
          resources:
            limits:
              cpu: "150m"
              memory: "512Mi"
