crud-backend/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: crud-backend
  namespace: crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-backend
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: crud-backend
          image: crud/backend
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 1
            failureThreshold: 10
            successThreshold: 1
          resources:
            limits:
              cpu: "150m"
              memory: "512Mi"
