crud-backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-backend-svc
  namespace: crud
spec:
  type: LoadBalancer
  selector:
    app: crud-backend
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 3000
