crud-backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-backend-ingress
  namespace: crud
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Exact
            backend:
              service:
                name: crud-backend-svc
                port:
                  number: 2348
